# pareto

./: .editorconfig  .gitignore  .golangci.yml  .jscpd.json  CLAUDE.md  Makefile  commitlint.config.js  lefthook.yml  package.json  turbo.json
.changeset/: README.md  config.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  init-db.sql  post-create.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  quality.yml  release.yml
apps/api/: .air.toml  Dockerfile  atlas.hcl  go.mod  go.sum  package.json  schema.sql
apps/api/cmd/api/: main.go
apps/api/internal/catalog/domain/: product.go
apps/api/internal/catalog/handler/: http.go
apps/api/internal/catalog/repository/: interface.go
apps/api/internal/catalog/service/: catalog.go
apps/api/internal/compare/handler/: http.go
apps/api/internal/database/: migrate.go
apps/api/internal/shared/cache/: redis.go
apps/api/internal/shared/config/: config.go
apps/api/internal/shared/database/: postgres.go
apps/api/migrations/: 20251201183249_init.sql  atlas.sum
apps/mobile/: app.json  metro.config.js  package.json  tailwind.config.js  tsconfig.json
apps/mobile/app/: _layout.tsx  compare.tsx  index.tsx
apps/web/: Dockerfile  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/lib/: query-client.ts
apps/workers/: Dockerfile  celeryconfig.py  package.json  pyproject.toml
apps/workers/scripts/: dev.sh
apps/workers/src/: __init__.py
apps/workers/src/normalizer/: __init__.py  parser.py
apps/workers/src/normalizer/extractors/: __init__.py  amazon.py  base.py
apps/workers/src/pareto/: __init__.py  calculator.py  normalizer.py  tasks.py
apps/workers/src/tasks/: celery_app.py
docker/: .env.example  docker-compose.prod.yml  docker-compose.yml
documentation/: CLAUDE.md  config.yaml
documentation/development/: CLAUDE.md  README.md  database.md  devcontainer.md
documentation/domain/: CLAUDE.md  README.md  pareto-optimization.md  quality-enforcement.md
documentation/implementation/: CLAUDE.md  README.md  data-flow.md  scraping-strategy.md
documentation/implementation/scaling/: CLAUDE.md  README.md  data-architecture.md  geographic-expansion.md  infrastructure-scaling.md  platform-expansion.md  vertical-expansion.md
documentation/milestones/: CLAUDE.md  MASTERPLAN.md  README.md
documentation/milestones/affiliate/: 01-link-generator.md  02-click-tracking.md  03-revenue-reports.md  README.md
documentation/milestones/catalog/: 01-schema.md  02-repository.md  03-internal-api.md  04-public-api.md  README.md
documentation/milestones/comparison/: 01-pareto-engine.md  02-api-integration.md  03-scoring.md  README.md
documentation/milestones/foundation/: 01-infrastructure.md  02-monorepo.md  03-legal.md  README.md
documentation/milestones/frontend/: 01-setup.md  02-core-pages.md  03-comparison.md  04-seo.md  05-polish.md  README.md
documentation/milestones/launch/: 01-deploy.md  02-monitoring.md  03-testing.md  04-go-live.md  README.md
documentation/milestones/mobile/: 01-setup.md  02-core-screens.md  03-comparison.md  04-native.md  05-store.md  README.md
documentation/milestones/normalizer/: 01-core.md  02-extractors.md  03-validation.md  04-entity-resolution.md  README.md
documentation/milestones/quality-enforcement/: 01-verify-skeleton.md  02-coverage-enforcement.md  03-type-safety.md  04-solid-complexity.md  05-security-scanning.md  06-precommit-ci.md  README.md
documentation/milestones/scraper/: 01-skeleton.md  02-antibot.md  03-queue.md  04-retailers-1.md  05-retailers-2.md  README.md
documentation/reference/: CLAUDE.md  README.md
documentation/reference/specs/: architecture.md  blueprint.md  comparaison-catalog.md  frontend.md  infrastructure.md  normalizer-catalog.md  scrapper-module.md
documentation/reference/stack/: README.md  cloudflare.md  docker.md  expo.md  go.md  nextjs.md  postgresql.md  python.md  react-native.md  react.md  redis.md  tailwind.md
documentation/workflows/: atlas-setup-workflow.md  devcontainer-workflow.md  foundation-workflow.md  scraper-initiative-workflow.md
make/: db.mk  dev.mk  devcontainer.mk  docker.mk  quality.mk  version.mk
scripts/verify/: go.sh  main.sh  python.sh  ratchet.sh  typescript.sh
